[tool.poetry]
name = "cb-stream"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvkvc.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.0"
websockets = "^11.0"
azure-storage-blob = "^12.15.0"
azure-identity = "^1.12.0"
pyarrow = "^11.0.0"
pandas = "^2.0.0"
apache-airflow = "^2.5.3"
sortedcollections = "^2.1.0"
click = "^8.1.3"
slack-sdk = "^3.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
reverse_relative = true
